--- a/Assets/Game/Scripts/Game.asmdef
+++ b/Assets/Game/Scripts/Game.asmdef
@@ -1,7 +1,11 @@
 {
     "name": "Game",
     "rootNamespace": "Game",
-    "references": [],
+    "references": [
+        "GUID:f8488ac59a4b5844e9dcf36cfe59e561",
+        "GUID:f32f6beaf6389984880109a93c1e00a8",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
